# SciTriage

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: pages.yml
docs/: EXTERNAL_BENCHMARK_PLAN.md  EXTERNAL_BENCHMARK_REPORT.md  INTEGRATIONS.md  LIVE_AGENT_LOOP_RESULTS.md  OPERATIONS_PRIVATE_TEMPLATE.md  PAPER_READINESS.md  PROJECT_STORY.md  RELATED_BENCHMARKS.md  RESEARCH_NEXT_STEPS.md
examples/: confounded_noisy_trace.json  evaluator_drift_trace.json  implementation_bug_trace.json
scitriage/: __init__.py  aggregate.py  autoresearch_probe.py  benchmark.py  candidate_manifest.py  claim_gate.py  claim_rewrite.py  cli.py  discovery_audit.py  evidence_board.py  hooks.py  plugin.py  probe_plan.py  probe_priority.py  real_summary.py  render.py  resource_fit.py  rules.py  schema.py  semantic_gate.py  toy_eval.py  toy_materialize.py  validity.py
scripts/: audit_mlagentbench_surfaces.py  build_public_failure_corpus.py  plan_official_audit_targets.py  reproduce_karpathy_probe.sh  run_closed_loop_replay_eval.py  run_experiment_campaign.py  run_false_discovery_corpus_eval.py  run_live_vectorization_agent_loop.py  run_llm_judge_baseline.py  run_mlagentbench_babylm_candidates.py  run_mlagentbench_cifar10_candidates.py  run_mlagentbench_clrs_candidates.py  run_mlagentbench_imdb_candidates.py  run_mlagentbench_vectorization_candidates.py  run_public_corpus_multiseed_eval.py  run_same_agent_policy_eval.py  summarize_external_audits.py  summarize_seed_noise_policy_eval.py
site/: index.html  styles.css
tests/: test_core.py
(+133 files in other folders)
