[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scitriage"
version = "0.1.0"
description = "Evidence gating and diagnostic probes for AutoResearch agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "SciTriage contributors"}
]
keywords = ["autoresearch", "agents", "reproducibility", "evaluation", "research-automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
scitriage = "scitriage.cli:main"

[tool.setuptools.packages.find]
include = ["scitriage*"]

